--- a/before_after.css
+++ b/before_after.css
@@ -2,10 +2,13 @@
 	position: absolute;
 	top: 0px;
 	left: 0px;
+	width: 100%;
 }
 
 .after {
 	position: absolute;
 	top: 0px;
 	left: 0px;
+	width: 100%;
+
 }
